Update kernel Config/patches for CEC support

--- a/projects/L4T/devices/Switch/linux/linux.aarch64.conf
+++ b/projects/L4T/devices/Switch/linux/linux.aarch64.conf
@@ -2605,6 +2605,8 @@ CONFIG_REGULATOR_TPS65132=y
 # CONFIG_REGULATOR_TPS61280 is not set
 CONFIG_REGULATOR_PMIC_OTP=y
 CONFIG_MEDIA_SUPPORT=y
+CONFIG_STAGING_MEDIA=y
+CONFIG_MEDIA_CEC=y
 
 #
 # Multimedia core support
@@ -2614,7 +2616,11 @@ CONFIG_MEDIA_CAMERA_SUPPORT=y
 # CONFIG_MEDIA_DIGITAL_TV_SUPPORT is not set
 # CONFIG_MEDIA_RADIO_SUPPORT is not set
 # CONFIG_MEDIA_SDR_SUPPORT is not set
-# CONFIG_MEDIA_RC_SUPPORT is not set
+CONFIG_MEDIA_RC_SUPPORT=y
+CONFIG_RC_CORE=y
+CONFIG_RC_MAP=y
+CONFIG_RC_DECODERS=y
+CONFIG_RC_DEVICES=y
 CONFIG_MEDIA_CONTROLLER=y
 # CONFIG_MEDIA_CONTROLLER_DVB is not set
 CONFIG_VIDEO_DEV=y
@@ -2959,6 +2965,7 @@ CONFIG_TEGRA_DSI_L4T_BL_INIT=y
 # CONFIG_TEGRA_DS90UH948Q_DESER is not set
 # CONFIG_TEGRA_EDP2LVDS_PS8625 is not set
 CONFIG_TEGRA_DP=y
+CONFIG_TEGRA_DP_BRANCH_STDP2550=y
 CONFIG_TEGRA_HDMI2_0=y
 # CONFIG_TEGRA_HDMI2GMSL_MAX929x is not set
 # CONFIG_TEGRA_HDMI2DSI_TC358870 is not set
@@ -2973,7 +2980,7 @@ CONFIG_TEGRA_DPHDCP=y
 # CONFIG_TEGRA_DEBUG_DP_HDCP is not set
 # CONFIG_TEGRA_YUV_BYPASS_MODE_FILTER is not set
 # CONFIG_TEGRA_DC_FAKE_PANEL_SUPPORT is not set
-CONFIG_TEGRA_CEC_SUPPORT=y
+# CONFIG_TEGRA_CEC_SUPPORT is not set
 CONFIG_TEGRA_T19X_GRHOST=y
 CONFIG_TEGRA_GRHOST_NVDLA=y
 CONFIG_TEGRA_GRHOST_PVA=y
@@ -3909,7 +3916,6 @@ CONFIG_STAGING=y
 #
 # CONFIG_SPEAKUP is not set
 # CONFIG_MFD_NVEC is not set
-# CONFIG_STAGING_MEDIA is not set
 
 #
 # Android
@@ -4662,7 +4668,9 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_LOGFS is not set
 # CONFIG_CRAMFS is not set
 CONFIG_SQUASHFS=y
-CONFIG_SQUASHFS_DECOMP_SINGLE=y
+# CONFIG_SQUASHFS_FILE_CACHE is not set
+CONFIG_SQUASHFS_FILE_DIRECT=y
+# CONFIG_SQUASHFS_DECOMP_SINGLE is not set
 # CONFIG_SQUASHFS_DECOMP_MULTI is not set
 # CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU is not set
 CONFIG_SQUASHFS_XATTR=y
