linux (Generic): add support for irtoy kernel module.

--- a/projects/Generic/linux/linux.x86_64.conf
+++ b/projects/Generic/linux/linux.x86_64.conf
@@ -3482,7 +3482,7 @@ CONFIG_IR_TTUSBIR=m
 CONFIG_IR_SERIAL=m
 CONFIG_IR_SERIAL_TRANSMITTER=y
 CONFIG_RC_XBOX_DVD=m
-# CONFIG_IR_TOY is not set
+CONFIG_IR_TOY=m
 CONFIG_CEC_CORE=y
 
 #
