linux: add support for irtoy kernel module for all architectures.

--- a/projects/NXP/devices/iMX8/linux/linux.aarch64.conf
+++ b/projects/NXP/devices/iMX8/linux/linux.aarch64.conf
@@ -3093,7 +3093,7 @@ CONFIG_IR_GPIO_TX=m
 CONFIG_IR_PWM_TX=m
 # CONFIG_IR_SERIAL is not set
 CONFIG_RC_XBOX_DVD=m
-# CONFIG_IR_TOY is not set
+CONFIG_IR_TOY=m
 CONFIG_CEC_CORE=y
 CONFIG_CEC_NOTIFIER=y
 
