--- a/projects/NXP/devices/iMX6/linux/linux.arm.conf
+++ b/projects/NXP/devices/iMX6/linux/linux.arm.conf
@@ -3193,7 +3193,7 @@ CONFIG_IR_GPIO_CIR=y
 # CONFIG_IR_PWM_TX is not set
 # CONFIG_IR_SERIAL is not set
 # CONFIG_RC_XBOX_DVD is not set
-# CONFIG_IR_TOY is not set
+CONFIG_IR_TOY=m
 CONFIG_CEC_CORE=y
 CONFIG_CEC_NOTIFIER=y
 
