--- a/packages/libretro/retroarch/tmpfiles.d/retroarch-userdirs.conf
+++ b/packages/libretro/retroarch/tmpfiles.d/retroarch-userdirs.conf
@@ -32,6 +32,7 @@ d    /storage/thumbnails         0777 root root - -
 d    /storage/assets             0777 root root - -
 d    /storage/overlays           0777 root root - -
 d    /storage/logfiles           0777 root root - -
+d    /storage/recordings         0777 root root - -
 
 d    /storage/.tmp/cores-workdir    0777 root root - -
 d    /storage/.tmp/joypads-workdir  0777 root root - -
