samba: expose recordings folder

--- a/distributions/Lakka/config/smb.conf
+++ b/distributions/Lakka/config/smb.conf
@@ -202,3 +202,11 @@
   writeable = yes
   root preexec = mkdir -p /tmp/database
 
+[Recordings]
+  path = /storage/recordings
+  available = yes
+  browseable = yes
+  public = yes
+  writeable = yes
+  root preexec = mkdir -p /storage/recordings
+
