retroarch: change default recordings folder and expose it via samba

--- a/distributions/Lakka/config/smb.conf
+++ b/distributions/Lakka/config/smb.conf
@@ -174,3 +174,11 @@
   browseable = yes
   public = yes
   writeable = yes
+
+[Recordings]
+  path = /storage/recordings
+  available = yes
+  browseable = yes
+  public = yes
+  writeable = yes
+  root preexec = mkdir -p /storage/recordings
