--- a/packages/lakka/retroarch_base/retroarch/tmpfiles.d/retroarch-userdirs.conf
+++ b/packages/lakka/retroarch_base/retroarch/tmpfiles.d/retroarch-userdirs.conf
@@ -7,6 +7,7 @@ d    /storage/shaders               0777 root root - -
 d    /storage/system                0777 root root - -
 d    /storage/logfiles              0777 root root - -
 d    /storage/playlists             0777 root root - -
+d    /storage/recordings            0777 root root - -
 d    /storage/remappings            0777 root root - -
 d    /storage/roms/downloads        0777 root root - -
 d    /storage/savefiles             0777 root root - -
