Run dock-hotplug before starting retroarch.
This Will properly force DPI if booted on dock, and audio switching. It also has the added bonus of force fixing audio issues where speakers randomly dont work on boot."

--- a/projects/L4T/devices/Switch/packages/retroarch/system.d/retroarch.service
+++ b/projects/L4T/devices/Switch/packages/retroarch/system.d/retroarch.service
@@ -9,6 +9,7 @@ Environment=HOME=/storage DISPLAY=:0
 EnvironmentFile=-/run/libreelec/retroarch.conf
 EnvironmentFile=-/storage/.cache/services/retroarch.conf
 ExecStartPre=-/usr/lib/retroarch/retroarch-config
+ExecStartPre=/usr/bin/dock-hotplug
 ExecStart=/usr/bin/retroarch
 # keep KillMode=process unless there is no good reason to switch to cgroup
 KillMode=process
