linux: add support for Realtek RTL8XXXU mainline kernel driver replace out-of-tree 8192CU and 8192DU drivers

--- a/projects/Amlogic/linux/linux.aarch64.conf
+++ b/projects/Amlogic/linux/linux.aarch64.conf
@@ -2345,7 +2345,7 @@ CONFIG_RTL_CARDS=m
 # CONFIG_RTL8188EE is not set
 # CONFIG_RTL8192EE is not set
 # CONFIG_RTL8821AE is not set
-CONFIG_RTL8192CU=m
+# CONFIG_RTL8192CU is not set
 CONFIG_RTLWIFI=m
 CONFIG_RTLWIFI_USB=m
 # CONFIG_RTLWIFI_DEBUG is not set
