--- a/projects/Rockchip/devices/RK3399/linux/default/linux.aarch64.conf
+++ b/projects/Rockchip/devices/RK3399/linux/default/linux.aarch64.conf
@@ -2370,7 +2370,8 @@ CONFIG_RTL_CARDS=m
 # CONFIG_RTL8192EE is not set
 # CONFIG_RTL8821AE is not set
 # CONFIG_RTL8192CU is not set
-# CONFIG_RTL8XXXU is not set
+CONFIG_RTL8XXXU=m
+CONFIG_RTL8XXXU_UNTESTED=y
 # CONFIG_RTW88 is not set
 # CONFIG_RTW89 is not set
 CONFIG_WLAN_VENDOR_RSI=y
