--- a/projects/Allwinner/linux/linux.aarch64.conf
+++ b/projects/Allwinner/linux/linux.aarch64.conf
@@ -2145,7 +2145,8 @@ CONFIG_RTL8187=m
 CONFIG_RTL8187_LEDS=y
 CONFIG_RTL_CARDS=m
 # CONFIG_RTL8192CU is not set
-# CONFIG_RTL8XXXU is not set
+CONFIG_RTL8XXXU=m
+CONFIG_RTL8XXXU_UNTESTED=y
 # CONFIG_RTW88 is not set
 # CONFIG_RTW89 is not set
 # CONFIG_WLAN_VENDOR_RSI is not set
