--- a/projects/RPi/devices/RPi4/linux/linux.aarch64.conf
+++ b/projects/RPi/devices/RPi4/linux/linux.aarch64.conf
@@ -2263,7 +2263,8 @@ CONFIG_RTL_CARDS=m
 # CONFIG_RTL8192EE is not set
 # CONFIG_RTL8821AE is not set
 # CONFIG_RTL8192CU is not set
-# CONFIG_RTL8XXXU is not set
+CONFIG_RTL8XXXU=m
+CONFIG_RTL8XXXU_UNTESTED=y
 # CONFIG_RTW88 is not set
 CONFIG_WLAN_VENDOR_RSI=y
 # CONFIG_RSI_91X is not set
