--- a/projects/Rockchip/devices/RK3328/linux/default/linux.aarch64.conf
+++ b/projects/Rockchip/devices/RK3328/linux/default/linux.aarch64.conf
@@ -1985,7 +1985,8 @@ CONFIG_RTL8187=m
 CONFIG_RTL8187_LEDS=y
 CONFIG_RTL_CARDS=m
 # CONFIG_RTL8192CU is not set
-# CONFIG_RTL8XXXU is not set
+CONFIG_RTL8XXXU=m
+CONFIG_RTL8XXXU_UNTESTED=y
 # CONFIG_RTW88 is not set
 # CONFIG_RTW89 is not set
 CONFIG_WLAN_VENDOR_RSI=y
