linux (Generic): enable SENSORS_JC42
jc42.ko - 10536 bytes

Signed-off-by: Rudi Heitbaum <rudi@heitbaum.com>

--- a/projects/Generic/linux/linux.x86_64.conf
+++ b/projects/Generic/linux/linux.x86_64.conf
@@ -3148,7 +3148,7 @@ CONFIG_SENSORS_FAM15H_POWER=m
 # CONFIG_SENSORS_I5500 is not set
 CONFIG_SENSORS_CORETEMP=y
 CONFIG_SENSORS_IT87=m
-# CONFIG_SENSORS_JC42 is not set
+CONFIG_SENSORS_JC42=m
 # CONFIG_SENSORS_POWR1220 is not set
 # CONFIG_SENSORS_LINEAGE is not set
 # CONFIG_SENSORS_LTC2945 is not set
